# nicegui-mcp

./: .gitignore  IMPLEMENTATION_PLAN.md  NiceGUI-MCP-Design-Doc.md  README.md  pyproject.toml
.windsurf/plans/: adoption-redesign.md
examples/: claude_desktop_config.json
nicegui_mcp/: __init__.py  analyzers.py  fixers.py  generators.py  models.py  patterns.py  profile.py  registry.py  reviewer.py  server.py
nicegui_mcp/docs/: __init__.py  async_tasks_performance.md  component_architecture.md  data_views_tables_charts.md  deployment_runtime.md  dialogs.md  forms_validation.md  layout_spacing_scrolling.md  state_management.md  styling_theming.md  testing.md
tests/: test_analyzers.py  test_fixers.py  test_generators.py  test_patterns.py  test_registry.py  test_reviewer.py  test_server.py
tests/fixtures/invalid/: ngl003_invalid.py  ngl004_invalid.py  ngl005_invalid.py  ngl007_invalid.py  ngl008_invalid.py  ngl009_invalid.py  ngl010_invalid.py  ngl013_invalid.py  ngl018_invalid.py
tests/fixtures/valid/: ngl003_valid.py  ngl004_valid.py  ngl005_valid.py  ngl007_valid.py  ngl008_valid.py  ngl009_valid.py  ngl010_valid.py  ngl013_valid.py  ngl018_valid.py
