[project]
name = "nicegui-mcp"
version = "0.1.0"
description = "Docs-first MCP server for NiceGUI guidance, static analysis, safe fixes, and starter generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.26.0",
  "pydantic>=2.7.0",
]

[project.scripts]
nicegui-mcp = "nicegui_mcp.server:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["nicegui_mcp*"]

[tool.setuptools.package-data]
nicegui_mcp = ["docs/*.md"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
